<resources>
    <string name="app_name">PF_SistemaInventarioITT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin Usuario</string>
    <string name="nav_header_subtitle">Nombre de usuario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuracion</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_products">Productos</string>
    <string name="menu_docs">Documentos</string>
    <string name="menu_cost">Gastos</string>
    <string name="menu_suppliers">Proveedores</string>
    <string name="menu_sections">Departamentos</string>
</resources>