<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pf_sistemainventarioitt.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.pf_sistemainventarioitt.ui.products.FragmentProducts"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products_fragment" />

    <fragment
        android:id="@+id/nav_docs"
        android:name="com.example.pf_sistemainventarioitt.ui.docs.FragmentDocs"
        android:label="@string/menu_docs"
        tools:layout="@layout/fragment_docs_fragment" />

    <fragment
        android:id="@+id/nav_cost"
        android:name="com.example.pf_sistemainventarioitt.ui.cost.FragmentCost"
        android:label="@string/menu_cost"
        tools:layout="@layout/fragment_cost_fragment" />

    <fragment
        android:id="@+id/nav_suppliers"
        android:name="com.example.pf_sistemainventarioitt.ui.suppliers.FragmentSuppliers"
        android:label="@string/menu_suppliers"
        tools:layout="@layout/fragment_suppliers_fragment" />

    <fragment
        android:id="@+id/nav_sections"
        android:name="com.example.pf_sistemainventarioitt.ui.sections.FragmentSections"
        android:label="@string/menu_sections"
        tools:layout="@layout/fragment_sections_fragment" />
</navigation>